--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --shadow-color: #FF0070;
+  --shadow-color: #FF8DCB;
   --border-color: #353430;
   --accent-color: #FFC2E6;
   --title-color: #FFC2E6;
@@ -18,8 +18,11 @@
   --page-text-color: #353430;
   --page-bg-color: #F1B2CE;
   --link-shadow:  #F1B2CE;
-  --text-font: 'IBM Plex Mono', serif;
+  --hover-color: rgb(50, 49, 45, 0.40);
+  --text-font: 'IBM Plex Mono', monospace;
   --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --page-bg-img: url(/images/cover-image-light.png);
   --header-bg-img: url(/images/cover-image.png);
+  --hidden-owerflow: hidden;
+  --hidden-const: 0;
 }
