--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,19 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  max-width: 1024px;
-  min-height: 768px;
   color: var(--border-color);
   font-family: var(--text-font);
   background-image: var(--page-bg-img);
   background-position: center;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
   padding: 20px;
-  background-image: var(--header-bg-img);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100%;
   position: relative;
-}
-
-.header__theme-menu {
   display: grid;
-  grid-template-rows: repeat(auto-fit, fit-content(100%));
 }
 
 .header__theme-menu-list {
@@ -43,7 +34,7 @@
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--hover-color);
 }
 
 .header__theme-menu-button:focus {
@@ -63,11 +54,13 @@
   font-size: var(--title-size);
   color: var(--title-color);
   text-shadow: 4px 4px 0 var(--shadow-color);
-  margin-block-start: 20%;
+  margin-block-start: 36vh;
   margin-inline-start: -2%;
+  font-weight: 700;
+  line-height: 82.5%;
 }
 
-.header__theme-menu::after {
+.decorated-zone::after {
   content: '';
   width: 25px;
   height: 25px;
@@ -78,7 +71,7 @@
   top: 20px;
 }
 
-.header__theme-menu::before {
+.decorated-zone:before {
   content: '';
   width: 25px;
   height: 25px;
@@ -93,8 +86,9 @@
   inline-size: 50%;
   font-size: 18px;
   font-weight: 700;
-  line-height: 23.4px;
-  margin-block: 8%;
+  line-height: 1.3;
+  margin-block-start: 15vh;
+  margin-block-end: 17vh;
   justify-self: end;
 }
 
@@ -103,7 +97,7 @@
   background-color: var(--decor-bg-color);
   font-size: 18px;
   font-weight: 700;
-  line-height: 23.4px;
+  line-height: 1.3;
 }
 
 .header__theme-menu-rec {
@@ -112,6 +106,9 @@
   top: 20px;
   right: 50px;
   text-transform: uppercase;
+  inline-size: var(--hidden-const);
+  block-size: var(--hidden-const);
+  overflow: var(--hidden-owerflow);
 }
 
 .header__theme-menu-rec::after {
@@ -124,7 +121,7 @@
   background-color: var(--border-color);
   background-clip: content-box;
   border-radius: 50%;
-  filter: drop-shadow(0px 0px 4px var(--border-color));
+  box-shadow: 0px 0px 4px var(--border-color);
   border-block-start: 1px solid var(--border-color);
   border-inline-end: 1px solid var(--border-color);
 }
@@ -147,7 +144,7 @@
 .main-title {
   font-size: 18px;
   font-weight: 700;
-  line-height: 23.4px;
+  line-height: 1.3;
 }
 
 .question__info {
@@ -159,7 +156,7 @@
 .main-text {
   font-size: 18px;
   font-weight: 400;
-  line-height: 23.4px;
+  line-height: 1.3;
   color: var(--page-text-color);
 }
 
@@ -181,7 +178,7 @@
 }
 
 .text-link:focus-visible {
-  border: 1px solid var(--page-text-color);
+  outline: 1px solid var(--page-text-color);
 }
 
 /*----------------------end-question---------------------*/
@@ -247,6 +244,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top center;
 }
 
 .first {
@@ -291,8 +289,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1024px;
-  min-height: 768px;
   position: relative;
 }
 
@@ -300,54 +296,39 @@
   font-size: var(--title-size);
   color: var(--title-color);
   text-shadow: 2px 2px 0 var(--shadow-color);
-  
+  margin-block: 27.5vi;
 }
 
-.footer-title::after {
-  content: '';
-  width: 25px;
-  height: 25px;
-  border-block-start: 1px solid var(--border-color);
-  border-inline-end: 1px solid var(--border-color);
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-
-.footer-title::before {
-  content: '';
-  width: 25px;
-  height: 25px;
-  border-block-end: 1px solid var(--border-color);
-  border-inline-start: 1px solid var(--border-color);
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-}
-
-@media (768px <= width <= 1024px) {
-  .page {
-    max-width: 768px;
-    min-height: 1024px;
-  }
-
+@media (width < 1024px) {
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
     gap: 13px;
     align-items: end;
-    margin-block-start: 16%;
+    margin-block-start: 26%;
+  }
+
+  .header__theme-menu-title {
+    margin-block-start: 17vh;
+  }
+
+  .header__theme-menu-text {
+    margin-block-start: 16vh;
+    margin-block-end: 18vh;
+  }  
+
+  .footer-title {
+    margin-block: 42vh;
   }
 }
 
 @media (width < 768px) {
-  .page {
-    min-width: 375px;
-    min-height: 668px;
-  }
-
   .header {
     padding: 10px;
+  }
+
+  .header__theme-menu-title {
+    margin-block-start: 10vh;
   }
 
   .header__theme-menu-list {
@@ -355,26 +336,42 @@
     flex-direction: column;
     gap: 13px;
     align-items: end;
-    margin-block-start: 16%;
-    margin-inline-end: 10px;
+    margin-block-start: 21%;
+    margin-inline-end: 16px;
+  }
+
+  .decorated-zone::after {
+    right: 10px;
+    top: 10px;
+  }
+  
+  .decorated-zone:before {
+    bottom: 10px;
+    left: 10px;
   }
 
   .header__theme-menu-text {
     inline-size: 100%;
+    margin-block-start: 8vh;
+    margin-block-end: 10vh;
   }
 
   .main-page {
-    gap: 40px;
+    gap: 50px;
   }
 
   .question {
-    padding: 0 10px 50px;
+    padding: 40px 10px;
     grid-template-rows: fit-content(32%) fit-content(68%);
     grid-template-columns: fit-content(100%);
   }
 
   .answer {
     padding-inline: 20px;
+  }
+
+  .width-limit {
+    inline-size: auto;
   }
 
   .answer__info {
@@ -425,7 +422,48 @@
 
   .footer {
     padding: 10px;
-    min-width: 375px;
-    min-height: 668px;
+  }
+
+  .footer-title {
+    margin-block: 38vh;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+
+  .header__theme-menu-rec {
+    position: absolute;
+    inline-size: 0;
+    block-size: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+  }
+  
+  .header__theme-menu-rec::after {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+  }
+  
+  :root {
+    --shadow-color: #FF8DCB;
+    --border-color: #353430;
+    --accent-color: #FFC2E6;
+    --title-color: #FFC2E6;
+    --decor-color: #353430;
+    --decor-bg-color: #FF8DCB;
+    --page-text-color: #353430;
+    --page-bg-color: #F1B2CE;
+    --link-shadow:  #F1B2CE;
+    --hover-color: rgb(50, 49, 45, 0.40);
+    --text-font: 'IBM Plex Mono', monospace;
+    --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --page-bg-img: url(/images/cover-image-light.png);
+    --header-bg-img: url(/images/cover-image.png);
+    --hidden-owerflow: hidden;
+    --hidden-const: 0;
   }
 }
