--- a/styles/light.css
+++ b/styles/light.css
@@ -21,8 +21,27 @@
   --hover-color: rgb(50, 49, 45, 0.40);
   --text-font: 'IBM Plex Mono', monospace;
   --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  --page-bg-img: url(/images/cover-image-light.png);
-  --header-bg-img: url(/images/cover-image.png);
+  --page-bg-img: url(../images/cover-image-light.png);
   --hidden-owerflow: hidden;
   --hidden-const: 0;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --shadow-color: #FF8DCB;
+  --border-color: #353430;
+  --accent-color: #FFC2E6;
+  --title-color: #FFC2E6;
+  --decor-color: #353430;
+  --decor-bg-color: #FF8DCB;
+  --page-text-color: #353430;
+  --page-bg-color: #F1B2CE;
+  --link-shadow:  #F1B2CE;
+  --hover-color: rgb(50, 49, 45, 0.40);
+  --text-font: 'IBM Plex Mono', monospace;
+  --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --page-bg-img: url(../images/cover-image-light.png);
+  --hidden-owerflow: hidden;
+  --hidden-const: 0;
+  }
 }
